k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: suneasy-dev
  labels:
    name: suneasy-dev
    environment: development
    managed-by: skaffold
